--- a/leetcode/pyproject.toml
+++ b/leetcode/pyproject.toml
@@ -11,6 +11,12 @@ python = "^3.12"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
+pre-commit = "^3.6.0"
+flake8 = "^7.0.0"
+pytest-cov = "^4.1.0"
+ipykernel = "^6.29.0"
+flake8-annotations = "^3.0.1"
+flake8-eradicate = "^1.5.0"
 
 [build-system]
 requires = ["poetry-core"]
